2009-10-20  Don Porter  <dgp@users.sourceforge.net>

	* unix/Makefile.in:	Compiling Tk no longer requires header files
	* win/Makefile.in:	from the TCL_PLATFORM DIR.  Baby step in
	pursuit of [Bug 1712098].  Also removed the long outdated and broken
	targets package-* that were for building Solaris packages.  Appears
	that the pieces needed for these targets to function have never been
	present in the current era of Tcl development and belong completely
	to Tcl pre-history.

2009-10-20  Andreas Kupries  <andreask@activestate.com>

	* library/msgs/pl.msg: Applied patch to Polish message catalog
	created and submitted by Pawel Pawlak <morris@elysium.pl> (via
	 JeffH).

2009-10-18  Donal K. Fellows  <dkf@users.sf.net>

	* doc/menu.n: Reorganized for readability, and added a note describing
	some subtleties of the -variable entry configuration option following
	some discussion with Joe Mistachkin.

2009-10-10  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (InitFont, TkpGetFontFromAttributes)
	(Tk_DrawChars, TkpDrawAngledChars): [Bug 1961455]: Draw underlines and
	overstrikes when using Xft for font rendering.

	* generic/tkFont.c (TkDrawAngledTextLayout): Optimize the zero-angle
	case better.

2009-10-08  Donal K. Fellows  <dkf@users.sf.net>

	* library/iconlist.tcl (Create): [Patch 2870648]: Corrected cursor
	used in file/directory dialogs.

2009-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/vistaTheme.tcl: [Bug 2787164]: Fix size of dropdown
	arrow on combobox and menubutton for Windows 7.

2009-10-07  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixScrlbr.c (TkpComputeScrollbarGeometry): [Patch 2088597]:
	Stop scrollbars from getting too small at the end.

2009-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinButton.c: [Bug 2860827]: Avoid 3D effects with
	user-specified backgrounds. The default disabled text is embossed on
	Windows. But this looks poor when a non-default background color is in