@@ -10,9 +10,12 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkAppInit.c,v 1.9 2008/04/27 22:39:12 dkf Exp $
+ * RCS: @(#) $Id: tkAppInit.c,v 1.10 2009/10/21 20:28:54 nijtmans Exp $
  */
 
+/* Make sure this file is never compiled with Stubs! */
+#undef USE_TCL_STUBS
+#undef USE_TK_STUBS
 #include "tk.h"
 #include "locale.h"
 
